--- a/static/css/article.css
+++ b/static/css/article.css
@@ -1,3 +1,8 @@
+[v-cloak] {
+    display: none
+}
+
+
 .black {
     border: 1px solid #00F
 }
@@ -23,6 +28,3 @@ img {
 
 }
 
-[v-cloak] {
-    display: none;
-}
