--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,8 +5,8 @@
     max-width: 100%;
     max-height: 100%;
 } */
-:global([v-cloak]) {
-    display: none !important;
+[v-cloak] {
+    display: none
 }
 
 .black {
